Et par forslag til forbedring